# sqlalchemy-alembic-core

./: .env.template  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 06d38fec831c_added_phone_to_user.py  cedee79fb731_add_phone_to_user.py
config/: logging.ini
database/: __init__.py  config.py  core.py  database.py  factory.py
database/models/: __init__.py  address.py  base.py  role.py  user.py
multi-alembic/: env.py  script.py.mako
multi-alembic/versions/: 33a7698d1028_initial_tables.py
single-alembic/: env.py
single-alembic/versions/: 5d5a92ab1658_add_initial_models.py  8f6988ee0ed5_initial_tables.py  d8977f6de428_initial_migration.py
sqltoolbox/: config.py  database.py  factory.py
sqltoolbox/models/: __init__.py  address.py  base.py  role.py  user.py
tests/: test_database.py
