# Definition of the build process for the package.
[build-system]
requires = ["setuptools", "wheel"]          # PEP 508 specifications.
build-backend = "setuptools.build_meta"     # PEP 517 back-end.

[project]
name = "sql_toolbox"
version = "0.0.1"
authors = [
  { name="Ãlvaro Rubio Segovia", email="alvaro.rubio.segovia@gmail.com" },
]
description = "A package to simplify the management of a database with SQLAlchemy + Alembic"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ARubiose/sqlalchemy-alembic-core"
"Bug Tracker" = "https://github.com/ARubiose/sqlalchemy-alembic-core/issues"